--- a/app/views/events/option_responses.html.erb
+++ b/app/views/events/option_responses.html.erb
@@ -7,7 +7,7 @@
       <div class="row" wow fadeInRight" data-wow-duration="500ms" data-wow-delay="300ms">
         <%= form_tag "/option_send_final", method: :post do %>
           <h4>Who</h4>
-          <p><%= EventInvitation.find_by(event_id: event_option[0].id).group.name %></p>
+          <p><%= Group.find(EventInvitation.find_by(event_id: event_option[0].id).group_id).name %></p>
           <br>
           <h4>What</h4>
           <p><%= event_option[0].name %></p>
@@ -17,12 +17,16 @@
           <br>
           <h4>When - Options</h4>
           <% event_option[1].each do |option| %>
-            <p><%= option[0].start.strftime("%a, %b %d %I:%M %P") %> - <%= option[0].end.strftime("%a, %b %d %I:%M %P") %></p>
+            <div class="col-md-2"><input type="submit" class="btn btn-success" value="Send Invite(s)"></div>
+            <div class="col-md-3"><%= option[0].start.strftime("%a, %b %d %I:%M %P") %> - <%= option[0].end.strftime("%I:%M %P") %></div>
             <input type="hidden" name="option" value="<%= option[0].id %>">
+            <% people = [] %>
             <% option[1].each do |person| %>
-              <p><%= person.name %></p>
+              <% people << person.name  %>
             <% end %>
-            <input type="submit" class="btn btn-success" value="Send Invite(s)">
+            <div class="col-md-3"><img src="http://icons.iconarchive.com/icons/custom-icon-design/pretty-office-8/16/User-blue-icon.png" > <%= people.join(", ") %></div>
+            <br>
+            <br>
           <% end %>
         <% end %>
       </div>
