--- a/app/views/users/signup.html.erb
+++ b/app/views/users/signup.html.erb
@@ -19,6 +19,13 @@
                         <p><input type="password" name="password"></p>
                         <h3>Confirm Password</h3>
                         <p><input type="password" name="password_confirmation"></p>
+                        <h3>Preference (if any)</h3>
+                        <select class="selectpicker" name="preference">
+                          <option value="">N/A</option>
+                          <option value="phone">Phone</option>
+                          <option value="email">Email</option>
+                        </select>
+                        <br>
                         <br>
                         <button class="btn btn-success">Sign Up</button>
                       </div>
