--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
           <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
               <% if current_user %>
-                <li class="active"><a>Today is <%= Date.today.strftime("%A, %b %e") %></a></li>
+                <li class="active"><a>Today is <%= Time.now.utc.to_date.strftime("%A, %b %e")%></a></li>
                 <li><a href="/events">Home</a></li>
                 <li class="dropdown"><a>Events (CODE THIS) <i class="fa fa-angle-down"></i></a>
                     <ul role="menu" class="sub-menu">
